# lunary

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
fuzz/fuzz_targets/: parse_itch.rs
src/: builder.rs  concurrent.rs  config.rs  error.rs  lib.rs  messages.rs  mmap.rs  parser.rs  simd.rs  zerocopy.rs  zerocopy_types.rs
src/bench/: adaptive.rs  config.rs  diagnostics.rs  fuzz.rs  mod.rs  parallel.rs  simd.rs  single.rs  tests.rs  utils.rs
tests/: check.sh  direct_listing.rs  fixtures.rs  integration.rs  mmap_shared.rs  simd_safety.rs  zerocopy_validation.rs
