[package]
name = "lunyn_itch_lite"
version = "0.1.0"
authors = ["Lunyn <contact@lunyn.com>"]
edition = "2021"
license = "MIT"
description = "Open-source lite ITCH (NASDAQ TotalView-ITCH) parser targeting ~10M msg/sec without advanced optimizations."
readme = "README.md"
repository = "https://github.com/Lunyn-HFT/lunyn-itch-lite"

[lib]
name = "lunyn_itch_lite"
path = "src/lib.rs"

[[bin]]
name = "itch-bench"
path = "src/bin/bench.rs"

[dependencies]
memmap2 = "0.9"
anyhow = "1"
thiserror = "1"

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
