[package]
name = "lunary"
version = "0.2.2"
authors = ["Lunyn <contact@lunyn.com>"]
edition = "2024"
license = "AGPL-3.0-or-later"
description = "High-performance ITCH (NASDAQ TotalView-ITCH) parser with zero-copy, SIMD, and lock-free concurrency."
readme = "README.md"
repository = "https://github.com/Lunyn-HFT/lunary"
homepage = "https://github.com/Lunyn-HFT/lunary"
keywords = ["itch", "nasdaq", "parser", "hft", "trading"]
categories = ["parsing", "finance", "network-programming"]

[lib]
name = "lunary"
path = "src/lib.rs"

[[bin]]
name = "itch-bench"
path = "src/bin/bench.rs"

[dependencies]
memmap2 = "0.9"
anyhow = "1"
thiserror = "1"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
crossbeam-deque = "0.8"
core_affinity = { version = "0.8", optional = true }
tempfile = "3.23.0"
zerocopy = { version = "0.8", features = ["derive"] }
memchr = "2.7"
clap = "4.0"
parking_lot = "0.12"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
mimalloc = { version = "0.1", optional = true }

[target.'cfg(target_env = "msvc")'.dependencies]
mimalloc = { version = "0.1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
arbitrary = "1"
libfuzzer-sys = "0.4"

[features]
default = ["simd"]
simd = []
avx512 = ["simd"]
allocator = ["mimalloc"]
pinning = ["core_affinity"]
full = ["simd", "allocator", "pinning"]
full-avx512 = ["avx512", "allocator", "pinning"]
